--- a/index.html
+++ b/index.html
@@ -789,18 +789,19 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
 
 
 loadMap(); // ✅ called after it's defined
-  function triggerHintDissolveAnimation(layer) {
+ function triggerHintDissolveAnimation(layer) {
   const path = layer._path;
   if (!path) return;
 
   path.style.opacity = '';
-  path.classList.add('hint-dissolve');
+  path.classList.add('correct-dissolve');
 
   setTimeout(() => {
-    path.classList.remove('hint-dissolve');
-    path.classList.add('hint-final');
+    path.classList.remove('correct-dissolve');
+    path.classList.add('hint-used-final');
   }, 2000);
 }
+
 
 
   function triggerCorrectDissolveAnimation(layer) {
