--- a/index.html
+++ b/index.html
@@ -539,7 +539,12 @@ if (segmentStateMap.has(id)) {
   const state = segmentStateMap.get(id);
 
   if (state.used_hint) {
-    layer.setStyle({ color: '#ffa50066', weight: 6 }); // translucent orange
+    layer.setStyle({
+  color: 'rgba(255, 165, 0, 0.4)', // soft transparent orange
+  weight: 6,
+  opacity: 0.7
+});
+
     setTimeout(() => {
       if (layer._path) {
         layer._path.style.opacity = '';
