--- a/index.html
+++ b/index.html
@@ -1028,8 +1028,12 @@ if (isCorrect) {
   }
 } else if (usedHint) {
   for (const layer of layers) {
-    layer.setStyle({ color: 'orange', weight: 6 });
-    layer._originalColor = 'orange';
+    layer.setStyle({
+  color: 'rgba(255, 165, 0, 0.4)', // soft transparent orange
+  weight: 6,
+  opacity: 0.7
+});
+    layer._originalColor = 'rgba(255, 165, 0, 0.4)';
   }
 } else {
   // Animate incorrect red segments
