--- a/index.html
+++ b/index.html
@@ -231,6 +231,9 @@
   <span style="font-size: 12px;">Guesses won’t be saved unless you log in.</span>
 </div>
 
+<p id="hint-info" style="font-size: 12.5px; color: #666; margin: 6px 0 12px; text-align: center;">
+  Need help? A hint appears automatically after 3 incorrect guesses.
+</p>
 
     <div>
       <button id="submit-guess">Submit</button>
