--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@ const suffixMap = {
   hwy: 'highway',
   pkwy: 'parkway',
   ter: 'terrace',
-  pl: 'place'
+  pl: 'place',
+  pk: 'pike'
 };
 
 let preLoginGuesses = [];
