--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@ if (segmentStateMap.has(id)) {
   color: 'rgba(255, 165, 0, 0.4)', // soft transparent orange
   weight: 6,
   opacity: 0.7
+  pane: 'clickable-buffer'
 });
 
     setTimeout(() => {
