--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,12 @@ document.getElementById('submit-guess').onclick = async function () {
     setTimeout(() => document.getElementById('feedback-message').innerText = '', 5000);
     const key = Object.keys(nameToLayers).find(k => normalizeName(k) === normalizedCorrect);
     for (const layer of nameToLayers[key] || []) {
-      layer.setStyle({ color: 'yellow', weight: 6 });
+      layer.setStyle({
+  color: 'yellow',
+  weight: 6,
+  pane: 'clickable-buffer'
+});
+
       layer._originalColor = 'yellow';
     }
     return; // Don't count this as an attempt, and don't save to Supabase
