--- a/index.html
+++ b/index.html
@@ -1155,9 +1155,14 @@ document.getElementById('give-up').onclick = async function () {
   usedHint = currentRoad.hintGiven;
 
   for (const layer of layers) {
-    layer.setStyle({ color: usedHint ? 'rgba(255, 165, 0, 0.4)' : 'red', weight: 6 });
-    layer._originalColor = usedHint ? 'rgba(255, 165, 0, 0.4)' : 'red';
-  }
+  const style = usedHint
+    ? { color: 'rgba(255, 165, 0, 0.4)', weight: 6, opacity: 0.7, pane: 'clickable-buffer' }
+    : { color: 'red', weight: 6, pane: 'clickable-buffer' };
+
+  layer.setStyle(style);
+  layer._originalColor = usedHint ? 'rgba(255, 165, 0, 0.4)' : 'red';
+}
+
 
   if (currentUserId) {
     await saveGuessSegmentIds(segmentIds, false, usedHint);
