--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ if (segmentStateMap.has(id)) {
     layer.setStyle({
   color: 'rgba(255, 165, 0, 0.4)', // soft transparent orange
   weight: 6,
-  opacity: 0.7
+  opacity: 0.7,
   pane: 'clickable-buffer'
 });
 
