--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@ layer.on('click', function () {
     } else {
       l.setStyle({ 
   color: 'black', 
-  weight: 13,              // ⬅️ increase this for better mobile tap area
-  pane: 'clickable-buffer' // ⬅️ needed to make expanded area clickable but invisible
+  weight: 6,              
+  pane: 'clickable-buffer'
 });
 
       l._originalColor = 'black';
