--- a/index.html
+++ b/index.html
@@ -861,7 +861,6 @@ document.getElementById('guess-input').addEventListener('input', () => {
   const normalizedInput = normalizeName(input);
   const targetName = normalizeName(currentRoad?.name || "");
 
-  // 🔧 Safely split road name into main and suffix (last word is the suffix)
   function splitNameAndSuffix(name) {
     const parts = name.trim().split(" ");
     if (parts.length === 1) return [parts[0], ""]; // No suffix
@@ -873,20 +872,22 @@ document.getElementById('guess-input').addEventListener('input', () => {
   const [inputMain, inputSuffix] = splitNameAndSuffix(normalizedInput);
   const [targetMain, targetSuffix] = splitNameAndSuffix(targetName);
 
-  // ⚠️ Only show "Check suffix!" if main matches but suffix does not
- if (
-  normalizeName(userInputMain) === normalizeName(correctMain) &&
-  correctSuffix &&
-  userInputSuffix.trim() !== '' && // must be typing a suffix
-  normalizeName(userInputSuffix) !== normalizeName(correctSuffix)
-) {
-  feedback.innerText = 'Check suffix!';
-  feedback.style.color = 'gold';
-} else {
-  feedback.innerText = '';
-}
+  const feedback = document.getElementById('feedback-message');
 
+  // Show "Check suffix!" only if the user is typing a suffix and it’s wrong
+  if (
+    normalizeName(inputMain) === normalizeName(targetMain) &&
+    targetSuffix &&
+    inputSuffix.trim() !== '' &&
+    normalizeName(inputSuffix) !== normalizeName(targetSuffix)
+  ) {
+    feedback.innerText = 'Check suffix!';
+    feedback.style.color = 'gold';
+  } else {
+    feedback.innerText = '';
+  }
 });
+
 
 
 
