--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <div class="legend-item"><div class="legend-color" style="background: orange;"></div>Hint Used</div>
   <div class="legend-color" style="background-color: #008000; margin-right: 15px;"></div>Correct
   <div class="legend-item"><div class="legend-color" style="background: yellow;"></div>Suffix Warning</div>
-  <div class="legend-item"><div class="legend-color" style="background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); border: none;"></div>Ultra-Hard Mode</div>
+  <div class="legend-item"><div class="legend-color" style="background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); border: none;"></div>Photo only</div>
 </div>
 
 <div id="auth-box" class="legend" style="right: 10px; left: auto;">
