--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
   const map = L.map('map', { zoomControl: false }).setView([40.09, -76.3], 12);
   map.createPane('clickable-buffer');
   map.getPane('clickable-buffer').style.pointerEvents = 'auto';
+  map.createPane('hiddenRoads');
+  map.getPane('hiddenRoads').style.pointerEvents = 'none'; // Roads cannot block clicks initially
   map.getPane('clickable-buffer').style.opacity = '1';
   map.createPane('maskPane'); // Create a custom pane for the gray mask
   map.getPane('maskPane').style.zIndex = 299; // Ensure it renders below roads
