--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,8 @@ if (isCorrect) {
     layer.setStyle({
   color: 'rgba(255, 165, 0, 0.4)', // soft transparent orange
   weight: 6,
-  opacity: 0.7
+  opacity: 0.7,
+  pane: 'hiddenRoads'
 });
     layer._originalColor = 'rgba(255, 165, 0, 0.4)';
   }
