--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
   vertical-align: middle;
   box-sizing: border-box; /* ✅ forces equal sizing and alignment */
 }
+.leaflet-tooltip.county-tooltip {
+  background-color: white !important;
+  color: black !important;
+}
 
 
     #auth-box {
