--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
   vertical-align: middle;
   box-sizing: border-box; /* ✅ forces equal sizing and alignment */
 }
-.leaflet-tooltip.county-tooltip {
+.leaflet-tooltip.county-tooltip,
+.leaflet-tooltip.county-tooltip.leaflet-tooltip-center {
   background-color: white !important;
   color: black !important;
+  border: 1px solid black !important;
 }
 
 
