--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
 
       onEachFeature: function (feature, layer) {
         layer.bindTooltip("Lancaster County", {
-          permanent: false,
+          permanent: true,
           direction: "center",
           className: "county-tooltip"
         });
