--- a/index.html
+++ b/index.html
@@ -743,8 +743,7 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
         layer.bindTooltip("Lancaster County", {
           permanent: false,
           direction: "center",
-          className: "county-tooltip",
-          pane: "tooltipPane" // 👈 forces it on top
+          className: "county-tooltip"
         });
 
 
